-
Type:
Bug
-
Status: Closed
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 0.28
-
Fix Version/s: 0.29
-
Component/s: C++ Broker
-
Labels:None
See http://qpid.2158936.n2.nabble.com/Inter-broker-link-with-SSL-td7611235.html for description of issue and analysis by Chris Richardson.
Summary: if less than 8 bytes are received initially, the protocol header can't be decoded but the broker thinks it has already done so, resulting in decoding errors when more data arrives.