QPID-5963: fix from Chris Richardson to prevent broker incorrecctly thinking it has decoded protocol header when it has not

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk@1615991 13f79535-47bb-0310-9956-ffa450edef68